fix: info scrollbar

--- a/client/src/components/card-button/info/styles.css
+++ b/client/src/components/card-button/info/styles.css
@@ -6,7 +6,7 @@
     height: 5rem;
     box-shadow: 0px 4px 20px rgba(9, 30, 66, 0.2);
     border-radius: 3px;
-    overflow-y: scroll;
+    overflow: hidden;
     margin-bottom: 1rem;
     display: flex;
     flex-direction: column;
